# musicli

./: README.md  musicli.py  pyproject.toml  recommender.py
.github/workflows/: release.yml
Formula/: musicli.rb
