[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "musicli"
version = "1.0.0"
description = "YouTube music player for the terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["prompt_toolkit>=3.0"]

[project.scripts]
musicli = "musicli:main"

[tool.setuptools]
py-modules = ["musicli", "recommender"]
